# Cpp-NeuroTactix

./: CMakeLists.txt  main.cpp
include/: Agent.h  Brain.h  Common.h  StateManager.h
src/: Agent.cpp  Brain.cpp  Map.cpp  StateManager.cpp
